--- a/index.Rmd
+++ b/index.Rmd
@@ -1,6 +1,6 @@
 ---
-title: "A Mini Bookdown"
-author: "Your Name"
+title: "A Mini Bookdown about Lauren"
+author: "Lauren Seroka"
 site: bookdown::bookdown_site
 documentclass: book
 classoption: openany
