--- a/index.Rmd
+++ b/index.Rmd
@@ -5,7 +5,4 @@ site: bookdown::bookdown_site
 documentclass: book
 classoption: openany
 ---
-
-# Create your open textbook
-
-Hello, world!!!
+:smile:
